# ChangeLog for net-im/gajim
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-im/gajim/ChangeLog,v 1.72 2008/08/05 16:57:30 gentoofan23 Exp $

* gajim-0.12 (18 Dec 2008)

  18 Dec 2008; justin Lecher (jlec) <jlec@j-schmitz.net>
  +files/0.11.3-misc-fixes.patch, +files/gajim-0.11.4-test_fix.patch,
  +metadata.xml, gajim-0.12:
  bump to 0.12 bug 251298

  05 Aug 2008; Thomas Anderson <gentoofan23@gentoo.org> metadata.xml:
  Add USE flag description to metadata as per GLEP 56.

  24 Jan 2008; Christoph Mende <angelos@gentoo.org> gajim-0.11.4.ebuild:
  Stable on amd64, bug #205253

  23 Jan 2008; Raúl Porcel <armin76@gentoo.org> gajim-0.11.4.ebuild:
  alpha/sparc stable wrt #205253

  23 Jan 2008; Christian Faulhammer <opfer@gentoo.org> gajim-0.11.4.ebuild:
  stable x86, bug 205253

  22 Jan 2008; Brent Baude <ranger@gentoo.org> gajim-0.11.4.ebuild:
  Marking gajim-0.11.4 ppc and ppc64 for bug 205253

  22 Jan 2008; Peter Weller <welp@gentoo.org>
  +files/gajim-0.11.4-test_fix.patch, gajim-0.11.4.ebuild:
  Fix tests

*gajim-0.11.4 (07 Dec 2007)

  07 Dec 2007; <welp@gentoo.org> +gajim-0.11.4.ebuild:
  Bump

  04 Dec 2007; <welp@gentoo.org> files/0.11.3-misc-fixes.patch:
  Fix typo in patch

  02 Dec 2007; Peter Weller <welp@gentoo.org> files/0.11.3-misc-fixes.patch:
  OK, fix for real this time...

  02 Dec 2007; Peter Weller <welp@gentoo.org>
  -files/0.11.3-buddylist-fix.patch, -files/0.11.3-keyTabswitch-fix.patch,
  +files/0.11.3-misc-fixes.patch, gajim-0.11.3-r1.ebuild:
  Fix patches wrt bug 200896

  28 Nov 2007; <welp@gentoo.org> files/0.11.3-buddylist-fix.patch,
  files/0.11.3-keyTabswitch-fix.patch:
  Fix patches

*gajim-0.11.3-r1 (25 Nov 2007)

  25 Nov 2007; <welp@gentoo.org> +files/0.11.3-buddylist-fix.patch,
  +files/0.11.3-keyTabswitch-fix.patch, +gajim-0.11.3-r1.ebuild:
  Revbump with patches wrt bugs 200187 and 200186

  19 Nov 2007; Jeroen Roovers <jer@gentoo.org> gajim-0.11.3.ebuild: