@@ -2,7 +2,9 @@ AUX 0.11.3-misc-fixes.patch 1401 RMD160 7bef42ecd6505b46fa4392fc72565c64ac17c0b1
 AUX gajim-0.11.4-test_fix.patch 866 RMD160 951dfebf5983949e620479d9453d353ae00cfe6b SHA1 513cbedbac5fae49f2ebce41f6bda3a81b744185 SHA256 d3e4eb0deea89f7b9e6cf47e3ca7c919189879b4d19b518ee60c2c0728489202
 DIST gajim-0.12.5.tar.gz 4692288 RMD160 e472d2f9942b57e091b4e5b0907b47747b0f764a SHA1 7985219959b0ff987b6276b36cb905c0db168466 SHA256 c6e56e11dc31569905de06b4564ff52fc0ab8944fe006ea9d4fe6362dbb5238f
 DIST gajim-0.12.tar.gz 4613023 RMD160 1166e817ab037d04b71ca73e2c11f72cd43d2e93 SHA1 e1392d8451b331fb8fc620caebfdb5a4628c3dd4 SHA256 4a5147efef033dcfd775542a27977a7e63d86ce8a93f166efe8477e829fb4546
+DIST gajim-0.13.1.tar.bz2 3934995 RMD160 4c117bc4e661c20dcaf03a7ef12fdded08f930bc SHA1 d4380b59cdedf46cb3d5ac47ea7fec6cf612142c SHA256 02953825e0ee8b125d6f112772f09571d06cb8493ed88d572c73791cda1c589c
 EBUILD gajim-0.12.5.ebuild 2786 RMD160 39528b6f438ea34ab551500ca5702d71c1a1049b SHA1 d8b2e8eafe8a5560e818b5ecb2f4a6e1f4a3fb32 SHA256 f50005f3cb09cfd873e98eec651207275f3e6fac99965dffef55dfefcc94c6a3
 EBUILD gajim-0.12.ebuild 2786 RMD160 39528b6f438ea34ab551500ca5702d71c1a1049b SHA1 d8b2e8eafe8a5560e818b5ecb2f4a6e1f4a3fb32 SHA256 f50005f3cb09cfd873e98eec651207275f3e6fac99965dffef55dfefcc94c6a3
-MISC ChangeLog 9997 RMD160 263664b8112cfed5680fbffbd170e0a886d414b7 SHA1 1a8a5d4a0f3b6cacb17a28e182bcc267b1c368f2 SHA256 68363f96fd791d2dfc81538db957834168d4a5264f6c675d4069525fbc38585a
+EBUILD gajim-0.13.1.ebuild 2799 RMD160 4b3efdbe94fca9185956877a84140cc95c700dc6 SHA1 66ea7a0c31b5145e4592d14c0c03bd491cc319b1 SHA256 45a7578fd0db6769bbe1f3524ce301885fe6eaac42098966ae5eaffefea83c0c
+MISC ChangeLog 10094 RMD160 1c57e640fcd3763d87e99ba383195481ff5714b6 SHA1 bacec202fc2d114de935a89f26f6fecfdf6d883f SHA256 1acdb33d6317e4fa9f2577cc300e4e14f68eea25ba5fb72446b4fabc1e2b9633
 MISC metadata.xml 650 RMD160 8661361b911800fedec09783f1e67beda7e5a6ce SHA1 d0df4c4f366a36d4bccc0f465fe2ab7cf9f0e3ec SHA256 34b0b5150dd947881ec1d89cced004d04d1b6f47cda67e2a106ccfeb2815800e
