@@ -2,6 +2,10 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: /var/cvsroot/gentoo-x86/net-im/gajim/ChangeLog,v 1.72 2008/08/05 16:57:30 gentoofan23 Exp $
 
+  03 Dec 2009; Justin Lecher (jlec) <jlec@j-schmitz.net>
+  +gajim-0.13.1.ebuild:
+  version bump
+
 * gajim-0.12 (18 Dec 2008)
 
   18 Dec 2008; justin Lecher (jlec) <jlec@j-schmitz.net>
